--- a/unit7/sensory-system-eye-anatomy-2-137/index.html
+++ b/unit7/sensory-system-eye-anatomy-2-137/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medical Language: Abdominal Quadrant Regions</title>
-    <script src="/h5p-player/main.bundle.js" charset="UTF-8"></script>
+    <script src="../../h5p-player/main.bundle.js" charset="UTF-8"></script>
 </head>
 
 <body>
@@ -15,9 +15,9 @@
           console.log("Initializing H5P content...");
             const el = document.getElementById('h5p-container');
             const options = {
-                h5pJsonPath: '/unit7/sensory-system-eye-anatomy-2-137', // Path to the extracted H5P content
-                frameJs: '/h5p-player/frame.bundle.js', // Path to player's frame.bundle.js
-                frameCss: '/h5p-player/styles/h5p.css', // Path to player's h5p.css
+                h5pJsonPath: './', // Path to the extracted H5P content
+                frameJs: '../../h5p-player/frame.bundle.js', // Path to player's frame.bundle.js
+                frameCss: '../../h5p-player/styles/h5p.css', // Path to player's h5p.css
             };
             new H5PStandalone.H5P(el, options);
         });
